Formatted all html files, put all body elements inside a root containers, fixed the alignment of all children elements in the root containers by using flexbox properties.

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,8 @@
-@import "navigation-bar.css";
+@import "navbar.css";
+
+* {
+    box-sizing: border-box;
+}
 
 html {
     height: 100%;
@@ -6,11 +10,16 @@ html {
 
 body {
     margin: auto;
-    min-height: 100%;
+    height: 100%;
     font-family: sans-serif;
-    display: grid;
-    grid-template: auto auto auto / auto;
-    align-content: space-between;
+}
+
+.root {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 /*          Main Start          */
